data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1806.wast
;; 7. **Test: Indirect Function Call with Conditional Operand Removal**    - **Description:** Implement an indirect function call within a loop, with a `br_if` that conditionally removes operands required by the function based on the stack's state.    - **Constraint Check:** Checks the consistency of operand stack handling during indirect calls and ensures the function retrieves proper arguments even with branching.

(assert_invalid
  (module
    (func $test-indirect-call-conditional-operand-removal
      (block
        (loop
          (i32.const 1)
          (br_if 0 (i32.const 0))
          (call_indirect (param i32) (type 0) (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)